; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ins_iu64.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ins_iu64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"Unable to tcadbput\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @ins_iu64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ins_iu64(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %18

11:                                               ; preds = %3
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @tcadbput(i8* %12, i32* %6, i32 4, i32* %7, i32 4)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %11
  %16 = call i32 @LOG_DEBUG(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %15, %11
  store i32 0, i32* %4, align 4
  br label %18

18:                                               ; preds = %17, %10
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @tcadbput(i8*, i32*, i32, i32*, i32) #1

declare dso_local i32 @LOG_DEBUG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
